Disable all implementations except for sbcl-bin

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,12 @@ env:
     - ROSWELL_URL="https://raw.githubusercontent.com/roswell/roswell/v$ROSWELL_VERSION/scripts/install-for-ci.sh"
 
   jobs:
-    - LISP=abcl
-    - LISP=allegro
-    - LISP=ccl
-    - LISP=clisp
-    - LISP=cmucl
-    - LISP=ecl
+    # - LISP=abcl
+    # - LISP=allegro
+    # - LISP=ccl
+    # - LISP=clisp
+    # - LISP=cmucl
+    # - LISP=ecl
     - LISP=sbcl-bin
 
 jobs:
