--- a/.projections.json
+++ b/.projections.json
@@ -1,5 +1,8 @@
 {
   "*": {
-    "start": "-title=REPL sbcl-vlime"
+    "start": "-title=REPL sbcl-vlime",
+    "plan": {
+        "root_add": "etc/plan"
+    }
   }
 }
