Run tests against sbcl _and_ ccl

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
             # XXX remove this override (i.e. put "latest" back in) after the
             # following roswell issue has been solved:
             # https://github.com/roswell/roswell/issues/497
-            # asdf_version=latest
+            asdf_version=latest
             asdf_version=3.3.5.3
             qlot_version=latest
           fi
@@ -57,7 +57,7 @@ jobs:
     strategy:
       fail-fast: false # Let the workflow continue as much as possible
       matrix:
-        lisp: [] #[ abcl, allegro, ccl, cmucl, ecl ]
+        lisp: [ ccl ] #[ abcl, allegro, cmucl, ecl ]
         experimental: [ true ]
         include:
           - lisp: sbcl-bin/2.2.11
@@ -87,7 +87,7 @@ jobs:
     strategy:
       fail-fast: false # Let the workflow continue as much as possible
       matrix:
-        lisp: [] #[ abcl, allegro, ccl, cmucl, ecl ]
+        lisp: [ ccl ] #[ abcl, allegro, cmucl, ecl ]
         include:
           - lisp: sbcl-bin/2.1.10
     env:
