--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,16 +35,12 @@ jobs:
         run: |
           event_name=${{ github.event_name }}
 
-          roswell_version=v21.10.14.111
-          asdf_version=3.3.5.3
-          qlot_version=0.11.5
+          roswell_version=latest
+          asdf_version=latest
+          qlot_version=latest
           if [[ $event_name == 'schedule' ]]; then
             roswell_version=latest
-            # XXX remove this override (i.e. put "latest" back in) after the
-            # following roswell issue has been solved:
-            # https://github.com/roswell/roswell/issues/497
-            # asdf_version=latest
-            asdf_version=3.3.5.3
+            asdf_version=latest
             qlot_version=latest
           fi
           echo "::set-output name=roswell-version::$roswell_version"
@@ -53,15 +49,13 @@ jobs:
 
   tests:
     needs: ci-config
+    timeout-minutes: 15
     if: needs.ci-config.outputs.enabled == 'yes'
     strategy:
       fail-fast: false # Let the workflow continue as much as possible
       matrix:
-        lisp: [ abcl, allegro, ccl, cmucl, ecl ]
-        experimental: [ true ]
-        include:
-          - lisp: sbcl-bin/2.1.10
-            experimental: false
+        lisp: [ sbcl-bin ]
+        experimental: [ false ]
     env:
       LISP: ${{ matrix.lisp }}
       PRIMARY_KEY: ${{ secrets.PRIMARY_KEY }}
@@ -80,18 +74,16 @@ jobs:
       - uses: actions/checkout@v2
       - run: make lisp-info-ros
       - run: make test-ros
-        timeout-minutes: 10
         continue-on-error: ${{ matrix.experimental }}
 
   report-warnings:
     needs: ci-config
+    timeout-minutes: 15
     if: needs.ci-config.outputs.enabled == 'yes'
     strategy:
       fail-fast: false # Let the workflow continue as much as possible
       matrix:
-        lisp: [ abcl, allegro, ccl, cmucl, ecl ]
-        include:
-          - lisp: sbcl-bin/2.1.10
+        lisp: [ sbcl-bin ]
     env:
       LISP: ${{ matrix.lisp }}
     defaults:
