Add 'start' target to fire up a REPL

--- a/.projections.json
+++ b/.projections.json
@@ -1,6 +1,6 @@
 {
   "*": {
-    "start": "-title=REPL sbcl-vlime",
+    "start": "-title=REPL make start",
     "plan": {
         "root_add": "etc/plan"
     }
